# revisiting-connections-crm

./: .gitignore  README.md  pyproject.toml  serve.py
reconnect/: config.py  database.py  main.py
reconnect/enrichment/: __init__.py  social.py
reconnect/ingestion/: apple_contacts.py  gmail.py  imessage.py
reconnect/resolution/: normalizer.py  resolver.py
reconnect/routers/: contacts.py  lists.py  settings.py  suggestions.py  sync.py
reconnect/scoring/: feedback.py  list_suggestions.py  rules.py  scorer.py  settings.py  suggester.py
reconnect/static/: styles.css
reconnect/templates/: base.html  contact_detail.html  contacts_list.html  custom_list_detail.html  custom_lists.html  dashboard.html  never_show.html  settings.html  sync_status.html
scripts/: bootstrap.py  sync_all.py
tests/: test_full_pipeline.py  test_web.py
