[project]
name = "reconnect"
version = "0.1.0"
description = "Personal relationship CRM that detects relationship decay and suggests reconnections"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "phonenumbers>=8.13",
    "thefuzz[speedup]>=0.22",
    "email-validator>=2.1",
]

[project.optional-dependencies]
gmail = [
    "google-api-python-client>=2.150",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]
calendar = [
    "pyobjc-framework-EventKit>=10.0",
]
enrichment = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
all = ["reconnect[gmail,calendar,enrichment,dev]"]

[project.scripts]
reconnect = "reconnect.main:run"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reconnect*"]
